<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dzadafa.mywallet.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.dzadafa.mywallet.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />
        
    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.dzadafa.mywallet.ui.budget.BudgetFragment"
        android:label="Budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.dzadafa.mywallet.ui.wishlist.WishlistFragment"
        android:label="@string/title_wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/action_settings" 
        android:name="com.dzadafa.mywallet.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_investment"
        android:name="com.dzadafa.mywallet.ui.investment.InvestmentFragment"
        android:label="Investments"
        tools:layout="@layout/fragment_investment" />
</navigation>
